se corrigio el responsible del index en el carrousel de noticia, ajustandose al tamaño correcto y del parrafo agregando media query y al parrafo text-overflow.

--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,22 @@
 }
 
 .max-inicio {
+  width: 100%;
   max-height: 528px;
   object-fit: cover;
+}
+
+@media (max-width: 768px) {
+  .max-inicio {
+    max-height: 237px;
+    object-fit: cover;
+  }
+
+}
+.carousel-caption p {
+  max-height: 2.6em;
+  overflow: hidden;
+  text-overflow: ellipsis; /* Agrega puntos suspensivos para indicar que hay más contenido */
 }
 
 body {
